# pyrrho

./: .gitignore  Makefile  README.md  constants.py  jsconfig.json  package-lock.json  package.json  pyproject.toml  pyrrho  scratch.ipynb  scripts.fish  seed.py
app/: __init__.py  corpus.py  logger.py  main.py  pyproject.toml
app/app/: corpus.py  main.py
app/app/routers/: corpus.py
app/core/: lexicon.py  main.py  utils.py
app/core/langs/ag/: corpus.py  lexicon.py
app/core/treebanks/: agldt.py  chunk.py  conll.py  corpus.py  docnode.py  nt.py  perseus.py  proiel.py  ref.py  render.py  test_nt.py  test_ref.py  treebank.py  word.py
app/render/: __init__.py  html.py
app/render/templates/: base.html  base.html.j2  treebank.html
app/routers/: corpus.py  definitions.py
app/routes/: __init__.py  corpus.py
app/static/: _theme.scss  base.scss  index.scss  reader.scss
app/templates/: base.html  index.html  treebank.html
cli/: main.py  render.py
core/: __init__.py  conll.py  constants.py  perseus.py  ref.py  render.py  seed.py  token.py  treebank.py  utils.py  word.py
core/corpus/: __init__.py  ag.py  corpus_entry.py  get_treebank.py  index.py  langs.py
core/nt/: __init__.py  nt.py  ref.py
core/render/: __init__.py  html.py  terminal.py
core/render/templates/: base.html.j2  treebank.html.j2
core/treebank/: __init__.py  conll.py  perseus.py  treebank.py
core/treebank/nt/: __init__.py  nt.py  ref.py
pyrrho/: pyproject.toml  seed.py
pyrrho/app/: corpus.py  main.py
pyrrho/core/: constants.py  perseus.py  ref.py  token.py  treebank.py  utils.py  word.py
pyrrho/core/corpus/: __init__.py  ag.py
pyrrho/core/nt/: nt.py  ref.py  test_nt.py
pyrrho/core/render/: __init__.py  html.py
pyrrho/pyrrho/: __init__.py  conll.py  constants.py  nt.py  perseus.py  ref.py  ref_index.py  test_nt.py  test_ref.py  treebank.py  utils.py  word.py
pyrrho/pyrrho/corpus/: ag.py
pyrrho/pyrrho/langs/ag/: corpus.py  lexicon.py
pyrrho/pyrrho/nt/: __init__.py  nt.py  ref.py  test_nt.py
pyrrho/pyrrho/render/: html.py
pyrrho/tests/: test_nt.py
scripts/: build_partials.py  partials.py  sanity_export.js  seed.py
static/: base.scss  reader.js  reader.scss  styles.css
styles/: styles.sass  styles.scss
styles/foundation/: _block.sass  _config.scss  _flex.sass  _index.sass  _inline.sass  _palette.scss  _shorthands.scss  _theme.sass  _theme.scss
tests/: test_nt.py  test_ref.py
