[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Vincent Carrier <vincentcarrier15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis-om = "^0.1.2"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
boltons = "^23.0.0"
lxml = "^4.9.2"
dominate = "^2.7.0"
requests = "^2.28.2"
pyconll = "^3.1.0"
python-dotenv = "^1.0.0"
rich = "^13.3.4"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
jupyter = "^1.0.0"
pytest = "^7.3.1"
mypy = "^1.2.0"
lxml-stubs = "^0.4.0"

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
warn_no_return = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
