[tool.poetry]
name = "pyrrho"
version = "0.1.0"
description = ""
authors = ["Vincent Carrier <vincentcarrier15@gmail.com>"]

[tool.poetry.scripts]
app = "pyrrho.app.main:main"
cli = "cli:main"

[tool.poetry.dependencies]
python = "^3.11"
boltons = "^23.0.0"
python-dotenv = "^1.0.0"

# app
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}

# cli
typer = "^0.9.0"

# lib
lxml = "^4.9.2"
dominate = "^2.7.0"
requests = "^2.28.2"
pyconll = "^3.1.0"
ordered-enum = "^0.0.8"
pycts = "^0.2.2"
rich = "^13.3.5"

[tool.poetry.group.dev.dependencies]
lxml-stubs = "^0.4.0"
mypy = "^1.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
warn_no_return = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = ["--strict-markers", "-m", "not slow"]
markers = ["slow"]
