[tool.poetry]
name = "pyrrho"
version = "0.1.0"
description = ""
authors = ["Vincent Carrier <vincentcarrier15@gmail.com>"]
packages = [{ include = "pyrrho" }]

[tool.poetry.dependencies]
python = "^3.11"
boltons = "^23.0.0"
lxml = "^4.9.2"
dominate = "^2.7.0"
requests = "^2.28.2"
pyconll = "^3.1.0"
python-dotenv = "^1.0.0"
ordered-enum = "^0.0.8"

[tool.poetry.group.dev.dependencies]
lxml-stubs = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
